Prevented video container collapsing, added overlay with restart (still needs work), styled text and gave font-family

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -1,4 +1,5 @@
 // FONTS
+@import url("https://fonts.googleapis.com/css2?family=Francois+One&display=swap");
 
 // Colors
 $color-background: #3b4044;
@@ -8,39 +9,41 @@ $color-highlight: #ffcd1b;
 
 // Dimensions
 
+// Margins
+$margin-video-container: 10rem;
+
 // Box Shadows
 .neu-shadow-inset--2px {
-  box-shadow: inset -2px -2px 2px rgba(255, 255, 255, 0.5),
-    inset 2px 2px 2px rgba(0, 0, 0, 0.5);
+  box-shadow: inset -2px -2px 2px rgba(255, 255, 255, 0.5), inset 2px 2px 2px rgba(0, 0, 0, 0.5);
 }
 .neu-shadow-inset--4px {
-  box-shadow: inset -4px -4px 2px rgba(255, 255, 255, 0.5),
-    inset 4px 4px 2px rgba(0, 0, 0, 0.5);
+  box-shadow: inset -4px -4px 2px rgba(255, 255, 255, 0.5), inset 4px 4px 2px rgba(0, 0, 0, 0.5);
 }
 .neu-shadow-outset--2px {
-  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5),
-    -2px -2px 2px rgba(255, 255, 255, 0.5);
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5), -2px -2px 2px rgba(255, 255, 255, 0.5);
 }
 .neu-shadow-outset--4px {
-  box-shadow: 4px 4px 2px rgba(0, 0, 0, 0.5),
-    -4px -4px 2px rgba(255, 255, 255, 0.5);
+  box-shadow: 4px 4px 2px rgba(0, 0, 0, 0.5), -4px -4px 2px rgba(255, 255, 255, 0.5);
 }
 .neu-shadow-inset-text--rg {
-  box-shadow: inset 0.5px 0.5px 0px 0px rgba(0, 0, 0, 1),
-    inset -0.2px -0.2px 0px 0px rgba(255, 255, 255, 1);
+  box-shadow: inset 0.5px 0.5px 0px 0px rgba(0, 0, 0, 1), inset -0.2px -0.2px 0px 0px rgba(255, 255, 255, 1);
 }
 .neu-shadow-inset-text--sm {
-  box-shadow: inset -2px -2px 2px rgba(255, 255, 255, 0.5),
-    inset 2px 2px 2px rgba(0, 0, 0, 0.5);
+  box-shadow: inset -2px -2px 2px rgba(255, 255, 255, 0.5), inset 2px 2px 2px rgba(0, 0, 0, 0.5);
 }
-// Mixins
+// Mixins for Box shadows
 @mixin neu-shadow-outset--2px {
-  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5),
-    -2px -2px 2px rgba(255, 255, 255, 0.5);
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5), -2px -2px 2px rgba(255, 255, 255, 0.5);
+}
+@mixin neu-shadow-inset--4px {
+  box-shadow: inset -4px -4px 2px rgba(255, 255, 255, 0.5), inset 4px 4px 2px rgba(0, 0, 0, 0.5);
 }
 @mixin neu-shadow-inset--2px {
-    box-shadow: inset -2px -2px 2px rgba(255, 255, 255, 0.5),
-    inset 2px 2px 2px rgba(0, 0, 0, 0.5);
+  box-shadow: inset -2px -2px 2px rgba(255, 255, 255, 0.5), inset 2px 2px 2px rgba(0, 0, 0, 0.5);
+}
+
+@mixin neu-shadow-inset-text--rg {
+  text-shadow: -1.5px -1.5px 0px rgba(0, 0, 0, 1), 0.5px 0.5px 0px rgba(255, 255, 255, 0.521);
 }
 
 // Extends
